fix: resolve codesmells